Add workaround for gcc 2.95.2 -O3 optimization bug involving nsCOMPtrs in a do loop. Thanks to Johnny Stenback <jst@netscape.com> for the patch. Bug #61501. r=waterson sr=brendan